--- a/po/es/LC_MESSAGES/zaz.po
+++ b/po/es/LC_MESSAGES/zaz.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: zaz 1.0.0\n"
 "Report-Msgid-Bugs-To: remigiusz.dybka@gmail.com\n"
 "POT-Creation-Date: 2010-08-23 21:36+0100\n"
-"PO-Revision-Date: 2023-08-21 00:06+0530\n"
+"PO-Revision-Date: 2023-08-21 00:42+0530\n"
 "Last-Translator: தமிழ்நேரக்குழு<anishprabu.t@gmail.com>.Language-Team: "
 "தமிழ்நேரக்குழு<anishprabu.t@gmail.com>\n"
 "Language-Team: \n"
@@ -49,13 +49,13 @@ msgid "Colour hints"
 msgstr "வண்ண குறிப்புகள்"
 
 msgid "Congratulations !!! You just pwned"
-msgstr ""
+msgstr "வாழ்த்துக்கள் !!! நீங்கள் தான் பணயம் வைத்தீர்கள்"
 
 msgid "Continue"
-msgstr ""
+msgstr "தொடரவும்"
 
 msgid "Credits"
-msgstr ""
+msgstr "கடன்கள்"
 
 msgid "Current score: %06d"
 msgstr "தற்போதய புள்ளிகள்: %06d"
@@ -64,25 +64,25 @@ msgid "Delete"
 msgstr "நீக்கு"
 
 msgid "Disable speed-up"
-msgstr ""
+msgstr "வேகத்தை முடக்கு"
 
 msgid "Double D"
 msgstr ""
 
 msgid "Dámaso Domínguez (AmiSpaTra)"
-msgstr ""
+msgstr "டமாசோ டொமிங்குஸ் (அமிஸ்பாட்ரா)"
 
 msgid "Easy"
-msgstr ""
+msgstr "எளிய"
 
 msgid "End game"
-msgstr ""
+msgstr "விளையாட்டை முடிக்கவும்"
 
 msgid "Exit"
-msgstr ""
+msgstr "வெளியேறு"
 
 msgid "Export video"
-msgstr ""
+msgstr "வீடியோவை ஏற்றுமதி"
 
 msgid "Exporting video [press ESC to cancel]"
 msgstr ""
