--- a/po/es/LC_MESSAGES/zaz.po
+++ b/po/es/LC_MESSAGES/zaz.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: zaz 1.0.0\n"
 "Report-Msgid-Bugs-To: remigiusz.dybka@gmail.com\n"
 "POT-Creation-Date: 2010-08-23 21:36+0100\n"
-"PO-Revision-Date: 2023-08-21 00:42+0530\n"
+"PO-Revision-Date: 2023-08-21 00:49+0530\n"
 "Last-Translator: தமிழ்நேரக்குழு<anishprabu.t@gmail.com>.Language-Team: "
 "தமிழ்நேரக்குழு<anishprabu.t@gmail.com>\n"
 "Language-Team: \n"
@@ -67,7 +67,7 @@ msgid "Disable speed-up"
 msgstr "வேகத்தை முடக்கு"
 
 msgid "Double D"
-msgstr ""
+msgstr "டபுள் டி"
 
 msgid "Dámaso Domínguez (AmiSpaTra)"
 msgstr "டமாசோ டொமிங்குஸ் (அமிஸ்பாட்ரா)"
@@ -85,64 +85,64 @@ msgid "Export video"
 msgstr "வீடியோவை ஏற்றுமதி"
 
 msgid "Exporting video [press ESC to cancel]"
-msgstr ""
+msgstr "வீடியோவை ஏற்றுமதி செய்கிறது [ரத்து செய்ய ESC ஐ அழுத்தவும்]"
 
 msgid "Extra Life !"
-msgstr ""
+msgstr "கூடுதல் வாழ்க்கை!"
 
 msgid "Extra points for remaining lives : "
 msgstr "மீதமுள்ள வாழ்க்கைக்கான கூடுதல் புள்ளிகள்: "
 
 msgid "Frederik Schwarzer"
-msgstr ""
+msgstr "ஃபிரடெரிக் ஸ்வார்சர்"
 
 msgid "French:"
-msgstr ""
+msgstr "பிரெஞ்சு:"
 
 msgid "Fullscreen"
-msgstr ""
+msgstr "முழு திரை"
 
 msgid "Gabor Kmetyko"
-msgstr ""
+msgstr "Gabor Kmetyko"
 
 msgid "Game Over"
-msgstr ""
+msgstr "ஆட்டம் முடிந்தது"
 
 msgid "Game paused"
-msgstr ""
+msgstr "விளையாட்டு இடைநிறுத்தப்பட்டது"
 
 msgid "Game type:"
-msgstr ""
+msgstr "விளையாட்டு வகை:"
 
 msgid "German:"
-msgstr ""
+msgstr "ஜெர்மன்:"
 
 msgid "Hall of Fame"
-msgstr ""
+msgstr "வாழ்த்தரங்கம்"
 
 msgid "Hungarian:"
-msgstr ""
+msgstr "ஹங்கேரியன்:"
 
 msgid "Infinity"
-msgstr ""
+msgstr "முடிவிலி"
 
 msgid "Irena Klon"
-msgstr ""
+msgstr "ஐரினா க்ளோன்"
 
 msgid "Italian:"
-msgstr ""
+msgstr "இத்தாலிய:"
 
 msgid "Joker"
-msgstr ""
+msgstr "ஜோக்கர்"
 
 msgid "Kamil Krzyspiak"
-msgstr ""
+msgstr "கமில் கிரிஸ்பியாக்"
 
 msgid "Keyb. sensivity"
-msgstr ""
+msgstr "கீப் உணர்திறன்"
 
 msgid "Kinga Dybka"
-msgstr ""
+msgstr "கிங்கா டிப்கா"
 
 msgid "Language"
 msgstr "மொழி"
@@ -151,22 +151,22 @@ msgid "Level cleared"
 msgstr "நிலை முடிந்தது"
 
 msgid "Lives left: %d"
-msgstr ""
+msgstr "மீதமுள்ள வாழ்க்கை: %d"
 
 msgid "Mateusz Jakubowski"
 msgstr ""
 
 msgid "Messy Bedroom"
-msgstr ""
+msgstr "குழப்பமான படுக்கையறை"
 
 msgid "Michael Sterrett"
-msgstr ""
+msgstr "மைக்கேல் ஸ்டெரெட்"
 
 msgid "Midnight Queen"
-msgstr ""
+msgstr "நள்ளிரவு ராணி"
 
 msgid "Mouse sensivity"
-msgstr ""
+msgstr "சுட்டி உணர்திறன்"
 
 msgid "Music volume"
 msgstr "இசை ஒலியளவு"
@@ -178,25 +178,25 @@ msgid "Next level"
 msgstr "அடுத்த நிலை"
 
 msgid "Nightmare"
-msgstr ""
+msgstr "கெட்ட கனவு"
 
 msgid "No"
 msgstr "இல்லை"
 
 msgid "Nouvel Hugues"
-msgstr ""
+msgstr "நோவல் ஹியூஸ்"
 
 msgid "Options"
 msgstr "விருப்பங்கள்"
 
 msgid "Over N' Under"
-msgstr ""
+msgstr "ஓவர் என்' அண்டர்"
 
 msgid "Professional"
-msgstr ""
+msgstr "தொழில்முறை"
 
 msgid "Profile:"
-msgstr ""
+msgstr "சுயவிவரம்:"
 
 msgid "Remigiusz Dybka"
 msgstr ""
