--- a/po/es/LC_MESSAGES/zaz.po
+++ b/po/es/LC_MESSAGES/zaz.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: zaz 1.0.0\n"
 "Report-Msgid-Bugs-To: remigiusz.dybka@gmail.com\n"
 "POT-Creation-Date: 2010-08-23 21:36+0100\n"
-"PO-Revision-Date: 2023-08-21 00:49+0530\n"
+"PO-Revision-Date: 2023-08-21 01:04+0530\n"
 "Last-Translator: தமிழ்நேரக்குழு<anishprabu.t@gmail.com>.Language-Team: "
 "தமிழ்நேரக்குழு<anishprabu.t@gmail.com>\n"
 "Language-Team: \n"
@@ -52,7 +52,7 @@ msgid "Congratulations !!! You just pwned"
 msgstr "வாழ்த்துக்கள் !!! நீங்கள் தான் பணயம் வைத்தீர்கள்"
 
 msgid "Continue"
-msgstr "தொடரவும்"
+msgstr "தொடர்"
 
 msgid "Credits"
 msgstr "கடன்கள்"
@@ -115,13 +115,13 @@ msgid "Game type:"
 msgstr "விளையாட்டு வகை:"
 
 msgid "German:"
-msgstr "ஜெர்மன்:"
+msgstr "செர்மன்:"
 
 msgid "Hall of Fame"
 msgstr "வாழ்த்தரங்கம்"
 
 msgid "Hungarian:"
-msgstr "ஹங்கேரியன்:"
+msgstr "அங்கேரியன்:"
 
 msgid "Infinity"
 msgstr "முடிவிலி"
@@ -133,13 +133,13 @@ msgid "Italian:"
 msgstr "இத்தாலிய:"
 
 msgid "Joker"
-msgstr "ஜோக்கர்"
+msgstr "நகையாள்"
 
 msgid "Kamil Krzyspiak"
 msgstr "கமில் கிரிஸ்பியாக்"
 
 msgid "Keyb. sensivity"
-msgstr "கீப் உணர்திறன்"
+msgstr "தட்டச்சு உணர்திறன்"
 
 msgid "Kinga Dybka"
 msgstr "கிங்கா டிப்கா"
@@ -160,7 +160,7 @@ msgid "Messy Bedroom"
 msgstr "குழப்பமான படுக்கையறை"
 
 msgid "Michael Sterrett"
-msgstr "மைக்கேல் ஸ்டெரெட்"
+msgstr "மைக்கேல் ச்டெரெட்"
 
 msgid "Midnight Queen"
 msgstr "நள்ளிரவு ராணி"
@@ -172,7 +172,7 @@ msgid "Music volume"
 msgstr "இசை ஒலியளவு"
 
 msgid "New profile"
-msgstr "புதிய அடையாளம்"
+msgstr "புதிய சுயவிவரம்"
 
 msgid "Next level"
 msgstr "அடுத்த நிலை"
@@ -184,13 +184,13 @@ msgid "No"
 msgstr "இல்லை"
 
 msgid "Nouvel Hugues"
-msgstr "நோவல் ஹியூஸ்"
+msgstr "நோவல் உயூச்"
 
 msgid "Options"
 msgstr "விருப்பங்கள்"
 
 msgid "Over N' Under"
-msgstr "ஓவர் என்' அண்டர்"
+msgstr "மேலும் கீழும்"
 
 msgid "Professional"
 msgstr "தொழில்முறை"
@@ -205,13 +205,13 @@ msgid "Resolution"
 msgstr ""
 
 msgid "Restart game"
-msgstr ""
+msgstr "மறுதுவக்கம்"
 
 msgid "Retry level"
-msgstr ""
+msgstr "நிலை மறுமுயற்சி"
 
 msgid "Russian:"
-msgstr ""
+msgstr "ருசியா:"
 
 msgid "SFX volume"
 msgstr "ஒலி"
@@ -220,7 +220,7 @@ msgid "Score: %06d"
 msgstr "புள்ளிகள்: %06d"
 
 msgid "Sequential"
-msgstr ""
+msgstr "வரிசையாக"
 
 msgid "Shortest time for this level and a hi score!"
 msgstr "இந்த நிலைக்கான சிறிய நேரம் மற்றும் அதிக புள்ளிகள்!"
@@ -232,13 +232,13 @@ msgid "Show FPS"
 msgstr "FPS காட்டு"
 
 msgid "Snail"
-msgstr ""
+msgstr "நத்தை"
 
 msgid "Sonar"
 msgstr ""
 
 msgid "Spanish:"
-msgstr "ச்பானிச்:"
+msgstr "தமிழ்:"
 
 msgid "Specs"
 msgstr ""
