--- a/po/es/LC_MESSAGES/zaz.po
+++ b/po/es/LC_MESSAGES/zaz.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: zaz 1.0.0\n"
 "Report-Msgid-Bugs-To: remigiusz.dybka@gmail.com\n"
 "POT-Creation-Date: 2010-08-23 21:36+0100\n"
-"PO-Revision-Date: 2023-08-21 01:04+0530\n"
+"PO-Revision-Date: 2023-08-21 01:21+0530\n"
 "Last-Translator: தமிழ்நேரக்குழு<anishprabu.t@gmail.com>.Language-Team: "
 "தமிழ்நேரக்குழு<anishprabu.t@gmail.com>\n"
 "Language-Team: \n"
@@ -103,7 +103,7 @@ msgid "Fullscreen"
 msgstr "முழு திரை"
 
 msgid "Gabor Kmetyko"
-msgstr "Gabor Kmetyko"
+msgstr "கபோர் க்மெட்டிகோ"
 
 msgid "Game Over"
 msgstr "ஆட்டம் முடிந்தது"
@@ -154,7 +154,7 @@ msgid "Lives left: %d"
 msgstr "மீதமுள்ள வாழ்க்கை: %d"
 
 msgid "Mateusz Jakubowski"
-msgstr ""
+msgstr "மேட்யூச் சக்குபோவ்ச்கி"
 
 msgid "Messy Bedroom"
 msgstr "குழப்பமான படுக்கையறை"
@@ -199,10 +199,10 @@ msgid "Profile:"
 msgstr "சுயவிவரம்:"
 
 msgid "Remigiusz Dybka"
-msgstr ""
+msgstr "ரெமிசியச் டிப்கா"
 
 msgid "Resolution"
-msgstr ""
+msgstr "தெளிவு"
 
 msgid "Restart game"
 msgstr "மறுதுவக்கம்"
@@ -235,49 +235,49 @@ msgid "Snail"
 msgstr "நத்தை"
 
 msgid "Sonar"
-msgstr ""
+msgstr "சோனார்"
 
 msgid "Spanish:"
 msgstr "தமிழ்:"
 
 msgid "Specs"
-msgstr ""
+msgstr "விவரக்குறிப்புகள்"
 
 msgid "Spiralis"
-msgstr ""
+msgstr "சுழல்"
 
 msgid "Start game"
-msgstr "விளையாட்டை துவங்கு"
+msgstr "துவங்கு"
 
 msgid "SuperZaz"
-msgstr ""
+msgstr "அருமை சாச்"
 
 msgid "Sure you want to end game?"
-msgstr ""
+msgstr "நிச்சயமாக நீங்கள் முடிக்க விரும்புகிறீர்களா?"
 
 msgid "Survival"
-msgstr ""
+msgstr "உயிர்வாழ்தல்"
 
 msgid "The Eye"
-msgstr ""
+msgstr "அந்த கண்"
 
 msgid "The Three Dragonz"
-msgstr ""
+msgstr "தி மூன்று டிராகன்ச்"
 
 msgid "The Tunnel"
-msgstr ""
+msgstr "சுரங்கப்பாதை"
 
 msgid "Time Bonus ! (%d sec * %d = %d)"
 msgstr "கூடுதல் நேரம் (%d நொடி * %d = %d)"
 
 msgid "Triad"
-msgstr ""
+msgstr "முக்கோணம்"
 
 msgid "Turkish:"
 msgstr "துருக்கிச்:"
 
 msgid "Twenty Three"
-msgstr ""
+msgstr "இருபத்து மூன்று"
 
 msgid "TwinTlantis"
 msgstr "இரட்டைஅட்லான்டிச்"
@@ -295,16 +295,16 @@ msgid "You have been warned"
 msgstr "நீங்கள் எச்சரிக்க பாடுகிறீர்கள்"
 
 msgid "Zatlantiz"
-msgstr ""
+msgstr "சட்லாண்டிச்"
 
 msgid "Zuza"
-msgstr ""
+msgstr "சூசா"
 
 msgid "[http://www.paniq.org] Released under CC BY-SA License"
-msgstr "[http://www.paniq.org] CC BY-SA உரிமத்தின் கீழ் வெளியிடப்பட்டது"
+msgstr "CC BY-SA உரிமத்தின் கீழ் வெளியிடப்பட்டது"
 
 msgid "[remigiusz.dybka@gmail.com] Released under GPLv3 License"
-msgstr "[remigiusz.dybka@gmail.com] GPLv3 உரிமம் மூலம் வெளியிடப்பட்டது"
+msgstr "சிபிஎல்பதிப்பு3 உரிமம் மூலம் வெளியிடப்பட்டது"
 
 msgid "additional coding:"
 msgstr "கூடுதல் நிரலாக்கம்:"
@@ -313,10 +313,10 @@ msgid "additional testing:"
 msgstr "கூடுதல் சோதனை:"
 
 msgid "choose a level set"
-msgstr ""
+msgstr "ஒரு நிலை தொகுப்பைத் தேர்வுசெய்க"
 
 msgid "code, gfx, snd & design:"
-msgstr ""
+msgstr "குறியீடு, சிஎஃப்எக்ச், எச்என்டி & வடிவமைப்பு:"
 
 msgid "locked"
 msgstr "பூட்டபட்டது"
@@ -328,10 +328,10 @@ msgid "paniq - Leonard Ritter"
 msgstr "பனிக் - லீயோனார்ட் ரிட்டர்"
 
 msgid "quality assurance:"
-msgstr ""
+msgstr "தர உத்தரவாதம்:"
 
 msgid "translations:"
 msgstr "மொழிபெயர்புகள்:"
 
 msgid "Николай Рощупкин"
-msgstr "Николай Рощупкин"
+msgstr "நிகோலாய் ரோச்சுப்கின்"
